[tool.poetry]
name = "aln-img"
version = "0.1.0"
description = "Powering image-based deep learning for bam-alignment (genomics)"
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
pysam = "^0.19.1"
numpy = "^1.22.4"
pydantic = "^1.9.1"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"
pylint = "^2.14.3"

[tool.poetry.extras]
dev = ["mypy", "pytest", "pylint"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pysam.*"
]
ignore_missing_imports = true

[tool.pylint]
max-line-length=240
